--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <div class="accordion" id="accordionGramatica">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingGramatica">
-                            <button class="accordion-button collapsed fw-bold text-secondary-emphasis" type="button"
+                            <button class="accordion-button fw-bold text-secondary-emphasis" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseGramatica" aria-expanded="false"
                                 aria-controls="collapseGramatica">
                                 Gramática
                             </button>
                         </h2>
-                        <div id="collapseGramatica" class="accordion-collapse collapse"
+                        <div id="collapseGramatica" class="accordion-collapse collapse show"
                             aria-labelledby="headingGramatica" data-bs-parent="#accordionGramatica">
                             <div class="accordion-body">
                                 <ul class="list-group list-group-flush">
@@ -48,13 +48,13 @@
                 <div class="accordion" id="accordionFirstFollow">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingFirstFollow">
-                            <button class="accordion-button collapsed fw-bold text-secondary-emphasis" type="button"
+                            <button class="accordion-button fw-bold text-secondary-emphasis" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseFirstFollow" aria-expanded="false"
                                 aria-controls="collapseFirstFollow">
                                 First / Follow
                             </button>
                         </h2>
-                        <div id="collapseFirstFollow" class="accordion-collapse collapse"
+                        <div id="collapseFirstFollow" class="accordion-collapse collapse show"
                             aria-labelledby="headingFirstFollow" data-bs-parent="#accordionFirstFollow">
                             <div class="accordion-body">
                                 <div class="row w-100">
@@ -100,13 +100,13 @@
                 <div class="accordion" id="accordionTabelaParsing">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingTabelaParsing">
-                            <button class="accordion-button collapsed fw-bold text-secondary-emphasis" type="button"
+                            <button class="accordion-button fw-bold text-secondary-emphasis" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseTabelaParsing" aria-expanded="false"
                                 aria-controls="collapseTabelaParsing">
                                 Tabela de Parsing
                             </button>
                         </h2>
-                        <div id="collapseTabelaParsing" class="accordion-collapse collapse"
+                        <div id="collapseTabelaParsing" class="accordion-collapse collapse show"
                             aria-labelledby="headingTabelaParsing" data-bs-parent="#accordionTabelaParsing">
                             <div class="accordion-body">
                                 <div class="table-responsive">
